# chronx

./: .gitignore  CHANGES.md  CONTRIBUTING.md  Cargo.toml  Cargo_dump.toml  ChronX_Whitepaper_v1.0.docx  PROJECT_BRIEF.md  README.md  SECURITY.md  SPEC.md  chronx-release.keystore  cpnx-wallet.json  genesis-params-v7-backup.json  genesis-params.json  genesis-params.json.genesis10-backup  governance-directives.json  node-warnings-after-fix.txt  patch_constants.py  patch_db.py  patch_engine.py  patch_error.py  patch_genesis_lib.py  patch_params.py  patch_rpc.py  patch_three_additions.py  patch_transaction.py  upload-cert.pem
.cargo/: config.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
chronx-data/: db  snap.000000000001BC2B
crates/chronx-consensus/: Cargo.toml
crates/chronx-consensus/src/: difficulty.rs  finality.rs  lib.rs  validator.rs
crates/chronx-core/: Cargo.toml  README.md
crates/chronx-core/src/: account.rs  claims.rs  constants.rs  error.rs  lib.rs  merkle.rs  transaction.rs  types.rs
crates/chronx-crypto/src/: dilithium.rs  keypair.rs  lib.rs
crates/chronx-dag/src/: lib.rs  validation.rs  vertex.rs
crates/chronx-genesis/: Cargo.toml  README.md
crates/chronx-genesis/src/: lib.rs  params.rs
crates/chronx-node/: Cargo.toml  README.md
crates/chronx-node/src/: keygen.rs  main.rs  oracom_submit.rs
crates/chronx-node/tests/: p2p.rs  smoke.rs
crates/chronx-p2p/: Cargo.toml
crates/chronx-p2p/src/: config.rs  lib.rs  message.rs  network.rs
crates/chronx-recovery/src/: lib.rs  query.rs  verifier.rs
crates/chronx-rpc/: Cargo.toml  README.md
crates/chronx-rpc/src/: api.rs  lib.rs  server.rs  types.rs
crates/chronx-state/: Cargo.toml
crates/chronx-state/src/: db.rs  engine.rs
crates/chronx-timelock/src/: lib.rs  query.rs  schedule.rs
crates/chronx-wallet/: Cargo.toml  README.md
crates/chronx-wallet/src/: main.rs  rpc_client.rs
crates/crates/chronx-consensus/src/: difficulty.rs
crates/crates/chronx-core/: README.md
crates/crates/chronx-core/src/: constants.rs  lib.rs  transaction.rs
crates/crates/chronx-crypto/: Cargo.toml
crates/crates/chronx-crypto/src/: dilithium.rs  hash.rs  pow.rs
crates/crates/chronx-dag/: Cargo.toml
crates/crates/chronx-dag/src/: validation.rs  vertex.rs
crates/crates/chronx-genesis/: README.md
crates/crates/chronx-genesis/src/: params.rs
crates/crates/chronx-node/: Cargo.toml
crates/crates/chronx-node/src/: main.rs
crates/crates/chronx-node/tests/: p2p.rs  smoke.rs
crates/crates/chronx-recovery/: Cargo.toml
crates/crates/chronx-recovery/src/: fee.rs  lib.rs  query.rs
crates/crates/chronx-rpc/: Cargo.toml  README.md
crates/crates/chronx-rpc/src/: api.rs  server.rs  types.rs
crates/crates/chronx-state/src/: lib.rs
crates/crates/chronx-timelock/: Cargo.toml
crates/crates/chronx-timelock/src/: query.rs  schedule.rs
crates/crates/chronx-wallet/: README.md
crates/crates/chronx-wallet/src/: main.rs
data_backup_pre_g8_final/: db
