[package]
name = "chronx-core"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
bincode    = { workspace = true }
hex        = { workspace = true }
bs58       = { workspace = true }
thiserror  = { workspace = true }
chrono     = { workspace = true }
