[package]
name = "chronx-p2p"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true

[dependencies]
chronx-core  = { workspace = true }
chronx-dag   = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
bincode      = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
tokio        = { workspace = true }
libp2p       = { workspace = true }
futures      = { workspace = true }
once_cell    = { workspace = true }
libp2p-swarm = { version = "0.45", features = ["macros"] }
