[package]
name = "chronx-rpc"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true

[dependencies]
chronx-core    = { workspace = true }
chronx-state   = { workspace = true }
chronx-genesis = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
tokio          = { workspace = true }
jsonrpsee      = { workspace = true }
anyhow         = { workspace = true }
bincode        = { workspace = true }
hex            = { workspace = true }
tower          = { workspace = true }
tower-http     = { workspace = true }
