[package]
name = "chronx-wallet"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true

[[bin]]
name = "chronx-wallet"
path = "src/main.rs"

[dependencies]
chronx-core   = { workspace = true }
chronx-crypto = { workspace = true }
chronx-rpc    = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
bincode       = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
tokio         = { workspace = true }
clap          = { workspace = true }
anyhow        = { workspace = true }
hex           = { workspace = true }
chrono        = { workspace = true }
reqwest       = { workspace = true }
