[package]
name = "chronx-crypto"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true

[dependencies]
chronx-core            = { workspace = true }
blake3                 = { workspace = true }
sha3                   = { workspace = true }
pqcrypto-dilithium     = { workspace = true }
pqcrypto-traits        = { workspace = true }
zeroize                = { workspace = true }
serde                  = { workspace = true }
thiserror              = { workspace = true }
rand                   = { workspace = true }
hex                    = { workspace = true }
