[package]
name = "chronx-dag"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true

[dependencies]
chronx-core   = { workspace = true }
chronx-crypto = { workspace = true }
serde         = { workspace = true }
bincode       = { workspace = true }
thiserror     = { workspace = true }
